stderr
JudgeMan.java:14: error: variable number is already defined in method judge(String[])
                String number = hand[k].substring(1);
                       ^
1 error
